--- a/chat.html
+++ b/chat.html
@@ -1,41 +1,42 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>Chat App</title>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="icon" href="/img/favicon.png" />
-    <link rel="stylesheet" href="/css/bootstrap.css" />
-    <link rel="icon" href="/img/favicon.png" />
-    <link rel="stylesheet" href="/css/styles.min.css" />
-    <link rel="stylesheet" href="/css/chat.css" />
-  </head>
 
-  <body>
+<head>
+  <title>Chat App</title>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <link rel="icon" href="/img/favicon.png" />
+  <link rel="stylesheet" href="/css/bootstrap.css" />
+  <link rel="icon" href="/img/favicon.png" />
+  <link rel="stylesheet" href="/css/styles.min.css" />
+  <link rel="stylesheet" href="/css/chat.css" />
+</head>
 
-
-
+<body>
 
 
-      </header>
 
-    <div class="chat col-md-12 col-xs-12" >
-      <div id="sidebar" class="chat__sidebar"></div>
-      <div class="chat__main">
-        <div id="messages" class="chat__messages"></div>
-        <!-- <div id="locations" class="chat__messages"></div> -->
 
-        <div class="compose">
-          <form id="user">
-            <input name="message" placeholder="Message" autocomplete="off"/>
-            <button>Send</button>
-          </form>
-          <button id="getLocation" disabled></buttonvalue="disable" disabled>
-        </div>
+
+  </header>
+
+  <div class="chat col-md-12 col-xs-12">
+    <div id="sidebar" class="chat__sidebar"></div>
+    <div class="chat__main">
+      <div id="messages" class="chat__messages"></div>
+      <div id="locations" class="chat__messages"></div>
+
+      <div class="compose">
+        <form id="user">
+          <input name="message" placeholder="Сообщение..." autocomplete="off" />
+          <button>Отправить</button>
+        </form>
+        <button id="getLocation" disabled></button value="disable" disabled>
       </div>
     </div>
+  </div>
 
-    <script id="msg-template" type="text/html">
+  <script id="msg-template" type="text/html">
       <div class="message">
         <p>
           <span class="message__name">{{username}}</span>
@@ -45,7 +46,7 @@
       </div>
     </script>
 
-    <script id="location-template" type="text/html">
+  <script id="location-template" type="text/html">
       <div class="message">
         <p>
           <span class="message__name">{{username}}</span>
@@ -55,7 +56,7 @@
       </div>
     </script>
 
-    <script id="user-rooms" type="text/html">
+  <script id="user-rooms" type="text/html">
       <h2 class="room-title">Room {{room}}</h2>
       <h3 class="list-title">Users</h3>
 
@@ -65,11 +66,12 @@
         {{/users}}
       </ul>
     </script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/mustache.js/3.0.1/mustache.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.22.2/moment.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/qs/6.6.0/qs.min.js"></script>
-    <script src="/socket.io/socket.io.js"></script>
-    <script src="/js/chat.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/mustache.js/3.0.1/mustache.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.22.2/moment.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/qs/6.6.0/qs.min.js"></script>
+  <script src="/socket.io/socket.io.js"></script>
+  <script src="/js/chat.js"></script>
 
-  </body>
+</body>
+
 </html>
