change index form

--- a/index.html
+++ b/index.html
@@ -1,31 +1,33 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>Chat App</title>
-        <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="icon" href="/img/favicon.png">
-        <link rel="stylesheet" href="/css/bootstrap.css">
-        <link rel="stylesheet" href="/css/styles.css">
-    </head>
-    <body class="bg" style="background-color: #D9D7D4;">
+
+<head>
+    <title>Chat App</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="icon" href="/img/favicon.png">
+    <link rel="stylesheet" href="/css/bootstrap.css">
+    <link rel="stylesheet" href="/css/styles.css">
+</head>
+
+<body class="bg" style="background-color: #D9D7D4;">
 
 
-        <div class="centered-form col-md-12 col-xs-12 bg">
+    <div class="centered-form col-md-12 col-xs-12 bg">
 
-            <div class="centered-form__box">
-                <h2>Join</h2>
-                <form action="/chat.html">
-                    <label>Display name</label>
-					<label class="small">DATA NOT PERSISTENT DO NOT REFRESH</label>
-					<label class="small italic">Powered by Enigma</label>
-                    <input type="text" name="username" autocomplete="off" placeholder="Display name" required>
-                    <label class="empty">Room</label>
-                    <input type="text" class="empty" name="room" autocomplete="on" value="Forum" placeholder="Forum" required>
-                    <button>Join</button>
-                </form>
-            </div>
+        <div class="centered-form__box">
+            <h2>Присоединиться</h2>
+            <form action="/chat.html">
+                <label>Имя</label>
+                <input type="text" name="username" autocomplete="off" placeholder="Введи имя" required>
+                <label class="empty">Комната</label>
+                <input type="text" class="empty" name="room" autocomplete="on" value="Forum" placeholder="Forum"
+                    required>
+                <button>Го</button>
+            </form>
         </div>
-    </body>
+    </div>
+</body>
+
 </html>
 `
